# memoq-clone

./: .eslintrc.js  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/: RELEASE_CHECKLIST.md
.github/workflows/: canary.yml  ci.yml  release.yml  staging.yml  test.yml
coverage/: clover.xml  coverage-final.json  index.html
coverage/adapters/: index.html  index.ts.html
coverage/components/TbPanel/: TbPanel.tsx.html  index.html
coverage/components/TmPanel/: TmPanel.tsx.html  index.html
coverage/hooks/: index.html  useSegmentWs.ts.html
coverage/stores/: alignmentStore.ts.html  authStore.ts.html  index.html  mtStore.ts.html  pluginStore.ts.html  projectStore.ts.html  qaStore.ts.html  tbStore.ts.html  tmStore.ts.html  vendorStore.ts.html  wsStore.ts.html
coverage/tauri/: commands.ts.html  index.html
scripts/: sync-version.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/plugin-api/: Cargo.toml
src-tauri/plugin-api/src/: lib.rs
src-tauri/plugins/example-mt-provider/: Cargo.toml
src-tauri/plugins/example-mt-provider/src/: lib.rs
src-tauri/server/: Cargo.toml
src-tauri/server/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  ws.rs
src-tauri/server/src/alignment/: mod.rs  parser.rs
src-tauri/server/src/auth/: handlers.rs  jwt.rs  middleware.rs
src-tauri/server/src/middleware/: rate_limit.rs
src-tauri/server/src/models/: mod.rs  project.rs  segment.rs  tb.rs  tm.rs  user.rs
src-tauri/server/src/parser/: mod.rs  xliff.rs
src-tauri/server/src/routes/: alignment.rs  analytics.rs  files.rs  mod.rs  mt.rs  plugins.rs  projects.rs  qa.rs  segments.rs  tb.rs  term_extraction.rs  tm.rs  vendor.rs
src-tauri/server/src/term_extraction/: mod.rs
src-tauri/server/tests/: alignment_tests.rs  analytics_tests.rs  api_tests.rs  auth_tests.rs  qa_workflow_tests.rs  term_extraction_tests.rs  vendor_tests.rs  ws_tests.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: export.rs  livedocs.rs  mod.rs  mt.rs  parser.rs  plugin.rs  project.rs  qa.rs  tb.rs  tm.rs
src-tauri/src/livedocs/: index.rs  mod.rs  search.rs
src-tauri/src/models/: mod.rs
src-tauri/src/mt/: deepl.rs  engine.rs  google.rs  mod.rs
src-tauri/src/parser/: docx.rs  mod.rs  traits.rs  xliff.rs
src-tauri/src/plugin/: mod.rs  registry.rs  runtime.rs  traits.rs
src-tauri/src/qa/: mod.rs
src-tauri/src/tb/: mod.rs  storage.rs
src-tauri/src/tm/: mod.rs  storage.rs
src-tauri/tests/: integration_test.rs
src-tauri/tests/fixtures/: sample.xliff
src/adapters/: index.ts  tauri.ts  types.ts  web.ts
src/adapters/__tests__/: adapter.test.ts
src/components/: ErrorBoundary.tsx
src/components/Auth/: LoginPage.tsx
src/components/Editor/: SegmentEditor.tsx  SegmentList.tsx
src/components/Home/: HomePage.tsx
src/components/Layout/: EditorLayout.tsx  Toolbar.tsx
src/components/LiveDocs/: LiveDocsManager.tsx
src/components/Plugins/: PluginConfigModal.tsx  PluginInstallPanel.tsx  PluginManager.tsx  PluginRow.tsx
src/components/ProjectDashboard/: ProjectDashboard.tsx  ProjectSettingsModal.tsx
src/components/ProjectView/: ProjectView.tsx
src/components/QaPanel/: QaIssueItem.tsx  QaPanel.tsx
src/components/Settings/: MtSettings.tsx
src/components/TbPanel/: TbPanel.tsx
src/hooks/: useSegmentWs.ts
src/stores/: alignmentStore.ts  authStore.ts  mtStore.ts  pluginStore.ts  projectStore.ts  qaStore.ts  tbStore.ts  tmStore.ts  vendorStore.ts  wsStore.ts
src/styles/: global.css
src/tauri/: commands.ts
src/types/: index.ts
tests/smoke/: README.md  app-launch.spec.ts  core-workflow.spec.ts  file-operations.spec.ts  offline-mode.spec.ts  performance.spec.ts  plugin-vendor.spec.ts  tm-operations.spec.ts
(+28 files in other folders)
