[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database — pinned to same version as memoq-clone to avoid libsqlite3-sys conflict
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Auth
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# File parsing
quick-xml = { version = "0.36", features = ["serialize"] }
zip = "2"

# Rate limiting
governor = { version = "0.6", features = ["dashmap"] }

[dev-dependencies]
axum-test = "14"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
